--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <http lang="en">
     <head>
-        <meta http-equiv="refresh" content="0; url=http://localhost:8080/todo"/>
+        <meta http-equiv="refresh" content="0; url=http://localhost:8080/todo/todo.do"/>
     </head>
 </http>
